<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.example</groupId>
  <artifactId>vertx-modular</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>common</module>
    <module>email</module>
    <module>apigateway</module>
    <module>auth</module>
    <module>card</module>
    <module>merchant</module>
    <module>role</module>
    <module>saldo</module>
    <module>topup</module>
    <module>transaction</module>
    <module>transfer</module>
    <module>user</module>
    <module>withdraw</module>
    <module>db-migration</module>
  </modules>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <vertx.version>4.5.24</vertx.version>
    <grpc.version>1.65.0</grpc.version>
    <protobuf.version>3.25.3</protobuf.version>
    <slf4j.version>2.0.13</slf4j.version>
    <lombok.version>1.18.32</lombok.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Vert.x BOM -->
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-stack-depchain</artifactId>
        <version>${vertx.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Internal modules -->
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>email</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>apigateway</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>auth</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>card</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>merchant</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>role</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>saldo</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>topup</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>transaction</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>transfer</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>user</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.example</groupId>
        <artifactId>withdraw</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- gRPC -->
      <dependency>
        <groupId>io.grpc</groupId>
        <artifactId>grpc-bom</artifactId>
        <version>${grpc.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Logging -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.5.6</version>
      </dependency>

      <!-- Database & Migration -->
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>42.7.3</version>
      </dependency>
      <dependency>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-core</artifactId>
        <version>9.22.3</version>
      </dependency>

      <!-- OpenTelemetry BOMs -->
      <dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-bom</artifactId>
        <version>1.38.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.opentelemetry.instrumentation</groupId>
        <artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
        <version>2.3.0-alpha</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- BCrypt for Password Hashing -->
      <dependency>
        <groupId>at.favre.lib</groupId>
        <artifactId>bcrypt</artifactId>
        <version>0.10.2</version>
      </dependency>

      <!-- Kafka -->
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-kafka-client</artifactId>
        <version>${vertx.version}</version>
      </dependency>

      <!-- Lombok -->
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- Global dependencies inherited by all modules -->
  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.6.0</version>
          <configuration>
            <filters>
              <filter>
                <artifact>*:*</artifact>
                <excludes>
                  <exclude>META-INF/*.SF</exclude>
                  <exclude>META-INF/*.DSA</exclude>
                  <exclude>META-INF/*.RSA</exclude>
                </excludes>
              </filter>
            </filters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.github.os72</groupId>
          <artifactId>protoc-jar-maven-plugin</artifactId>
          <version>3.11.4</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
